# bch-wallet

./: README.md  bun.lockb  package-lock.json  package.json  splash.html  tailwind.config.js  walletname
.github/workflows/: publish-to-auto-release.yml
src/: global.css  root.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bitcoincash-addr/: .travis.yml  Cargo.toml  README.md
src-tauri/bitcoincash-addr/examples/: convert.rs  encode.rs
src-tauri/bitcoincash-addr/fuzz/: Cargo.toml
src-tauri/bitcoincash-addr/fuzz/fuzz_targets/: decode.rs  encode.rs
src-tauri/bitcoincash-addr/src/: lib.rs
src-tauri/bitcoincash-addr/src/base58/: errors.rs  mod.rs
src-tauri/bitcoincash-addr/src/cashaddr/: errors.rs  mod.rs
src-tauri/icons/: icon.icns
src-tauri/secp256k1-abc/: Cargo.toml
src-tauri/secp256k1-abc/no_std_test/: Cargo.toml
src-tauri/secp256k1-abc/no_std_test/src/: main.rs
src-tauri/secp256k1-abc/secp256k1-sys-abc/: build.rs
src-tauri/secp256k1-abc/secp256k1-sys-abc/src/: lib.rs  recovery.rs
src-tauri/secp256k1-abc/src/: lib.rs  recovery.rs  schnorrabc.rs  schnorrsig.rs  secret.rs
src-tauri/src/: address.rs  error.rs  lib.rs  main.rs
src-tauri/src/coins/: mod.rs  selection.rs  utxo.rs
src-tauri/src/encryption/: mod.rs
src-tauri/src/keys/: address.rs  bip44.rs  error.rs  mod.rs
src-tauri/src/network/: electrum.rs  ws.rs
src-tauri/src/store/: storage.rs
src-tauri/src/transaction/: build.rs
src/components/cashassembly/: cashassembly.tsx
src/components/hdkey/: hdkey.tsx
src/components/header/: header.tsx
src/components/history/: history.tsx
src/components/login/: login.tsx
src/components/mnemonic/: mnemonic.tsx
src/components/network/: network.tsx
src/components/send/: send.tsx
src/components/svg/: bch-logo.tsx
src/components/tokens/: tokens.tsx
src/components/utils/: utils.tsx
src/components/wallet/: wallet.tsx
src/routes/: index.tsx  layout.tsx
