[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
portpicker = "0.1" # used in the example to pick a random free port
rand_core = "0.6.4"
rand_chacha = "0.3.1"
bincode = "1.3.3"
serde_json = "1.0"
tauri = { version = "1.4.0", features = [ "macos-private-api", "window-set-title", "window-close", "window-show", "window-hide", "window-create", "global-shortcut-all", "protocol-all", "process-relaunch", "path-all", "http-all", "process-exit", "dialog-all", "window-set-decorations", "fs-exists"] }
electrum-client = "0.18.0"
bitcoinsuite-core = { git = "https://github.com/samrock5000/cashtokens-rs" }
# bitcoinsuite-core = { path = "../../cashtokens-rs/bitcoinsuite-core" }
sled = "0.34.7"
hex = "0.4.3"
bytes = "1.4.0"
#bitcoincash-addr = "0.5.2"
bitcoincash-addr = { path = "bitcoincash-addr" }
thiserror = "1.0.46"
sigser = { git = "https://github.com/samrock5000/sigser.git" }
aes-gcm = "0.9.4"
argon2 = "0.4"
secp256k1-abc = { path = "secp256k1-abc" }
tokio = { version = "1", features = ["full"] }
num-bigint = "0.4.3"
bitcoin_hashes = "0.11.0"
serde = "1.0.185"
lazy_static = "1.4.0"
rand = "0.8.5"
bitvec = "1.0.1"
dirs = "5.0.1"
regex = "1.9.3"
secp256k1 = "0.27.0"
tiny-bip39 = "1.0.0"
tauri-bundler = "1.4.0"
#rustls = "0.21.8"
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
url = "2.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
